Fix fillScreen for the AS util modal - was displaying half off screen at <976px width screens

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins";
+
 body {
   position: relative;
 }
@@ -42,11 +45,10 @@ h2 > .label {
   }
 
   &.container {
-    margin-left: -585px;
-
     .modal-body {
       max-height: none;
     }
+    width: ((@gridColumnWidth) * 12) + (@gridGutterWidth * (12 - 1)) - 14;
   }
 
   .modal-footer {
@@ -54,6 +56,22 @@ h2 > .label {
 
     .btn-cancel {
       float: right;
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+  .modal {
+    &.container {
+      width: 92% !important;
+    }
+  }
+}
+@media (max-width: 767px) {
+  .modal {
+    &.container {
+      width: 92% !important;
+      margin-left: auto !important;
     }
   }
 }
